delay option added

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Responsive div</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="../src/jquery.responsivediv.js"></script>
+		<script src="../dist/jquery.responsivediv.min.js"></script>
 
         <style>
             body {
@@ -56,7 +56,7 @@
 
         <div id="intro">
             <h1>Responsive div - demo</h1>
-            The divs are "responsive" based on parent content, not on screen-width.
+            Resize the screen and watch how the help classes assigned to the divs changes.
         </div>
 
         <div id="demo-wrapper">
